fix: mkfastq outputs
mkfastq outputs fastqs in 2 locations: (i) Undetermined fastqs are put
into `*/outs/fastq_path/` and (ii) sample fastqs are put into
`*/outs/fastq_path/*/`. In addition, it outputs a number of reports to
`*/outs/fastq_path/`. By limiting pattern to
`${bcl.getSimpleName()}/outs/fastq_path/*.fastq.gz`, only Undetermined
fastqs are moved across to the output directory. To move all files
outputted, alter output path to
`${bcl.getSimpleName()}/outs/fastq_path/*`.

--- a/modules/nf-core/modules/cellranger/mkfastq/meta.yml
+++ b/modules/nf-core/modules/cellranger/mkfastq/meta.yml
@@ -24,10 +24,10 @@ input:
       description: Sample sheet
       pattern: "*.csv"
 output:
-  - fastq:
+  - fastq_path:
       type: file
-      description: Unaligned FastQ files
-      pattern: "*.fastq.gz"
+      description: Output of bcl2fastq2, which includes unaligned FastQ files
+      pattern: "*/outs/fastq_path/*"
   - versions:
       type: file
       description: File containing software version
